# ai-2048

./: Cargo.toml  README.md
benches/: game_benchmark.rs
src/: game.rs  lib.rs  main.rs  tui.rs
src/agent/: expectimax.rs  mod.rs  random.rs  rl.rs  user.rs
src/tui/: board.rs  menu.rs  mod.rs
