[package]
name = "ai-2048"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_2048"
src = "src/lib.rs"

[[bin]]
name = "ai_2048_cli"
path = "src/bin/cli.rs"

[[bench]]
name = "game_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
crossterm = "0.26.1"
enum-map = "2.5.0"
etcetera = "0.8.0"
fastrand = "1.9.0"
linfa = "0.6.1"
once_cell = "1.18.0"
rayon = "1.7.0"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
transpose = "0.2.2"
tui = "0.19.0"
